--- a/adscatcher/AdsCatcher/templates/base.html
+++ b/adscatcher/AdsCatcher/templates/base.html
@@ -16,9 +16,9 @@
         <div class="container-fluid">
             <div class="menu-wrapper">
                 <ul class="nav-list text-center effect">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Reporting</a></li>
-                    <li><a href="#">Feedback</a></li>
+                    <li><a href="{% url 'blog:index' %}">Home</a></li>
+                    <li><a href="{% url 'blog:reporting' %}">Reporting</a></li>
+                    <li><a href="{% url 'blog:feedback' %}">Feedback</a></li>
                     <li><a href="#">Login</a></li>
                     <li><a href="#">Signup</a></li>
                     </ul>
@@ -29,7 +29,7 @@
             <div id="main-nav">
                 <div class="container-fluid">
                     <div class="nav-header">
-                        <a href="index.html" class="nav-brand">페이지 <span>이름 ?</span></a>
+                        <a href="{% url 'blog:index' %}" class="nav-brand">페이지 <span>이름 ?</span></a>
                     </div>
 				</div>
 			</div>
