gallery 앱 수정과 communication 앱 추가

--- a/AdsCatcher/gallery/templates/gallery/index.html
+++ b/AdsCatcher/gallery/templates/gallery/index.html
@@ -5,49 +5,34 @@
 
             <div class="container-fluid title">
 				<div class="col-md-4 col-md-offset-4 text-center">
-					<h2>멍에의 전당</h2>
+					<h2><i>멍에의 전당 !</i></h2>
 				</div>
 			</div>
 		
-			<div class="container-fluid title">
+			<div class="container">
+				<div class="col-md-10 col-md-offset-1">
 
 				{% for gallery in gallery_list %}
-				<div class="col-md-5 col-md-offset-1 text-center">
+				<div class="col-md-6 text-center">
 					<div class="media">
 						<div class="media-left">
 							<a href="#">
-								<img class="media-object" src="{{ gallery.image.url }}" width="80" height="80" alt="...">
+								<img src="{{ gallery.image.url }}" width="80" height="80" alt="...">
 							</a>
 						</div>
-						<div class="media-body  media-middle">
-							<h4 class="media-heading">순위 / 페이지 이름</h4>
-							누적 변경횟수 N
+						<div class="media-body media-middle">
+							<h3 class="media-heading">{{ gallery.title }}</h3>
+							누적 변경횟수 {{ gallery.count }}
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-5  text-center">
-					<div class="media">
-						<div class="media-left">
-							<a href="#">
-								<img class="media-object" src="{{ gallery.image.url }}" width="80" height="80" alt="...">
-							</a>
-						</div>
-						<div class="media-body  media-middle">
-							<h4 class="media-heading">순위 / 페이지 이름</h4>
-							누적 변경횟수 N
-						</div>
-					</div>
-				</div>
-
 				{% endfor %}
+				</div>
 
+				
 				
 			</div>
 				
-				<div class="col-md-4 col-md-offset-4 text-center">
-				{% if user.is_active %}
-					<a style="margin-left:10px" href="{% url 'gallery:gallery_new' %}">새 글쓰기</a>
-				{% endif %}
-				</div>
+			
 				
 			{% endblock %}
