--- a/adscatcher/AdsCatcher/templates/base.html
+++ b/adscatcher/AdsCatcher/templates/base.html
@@ -18,8 +18,8 @@
                 <ul class="nav-list text-center effect">
                     <li><a href="{% url 'gallery:index' %}">Home</a></li>
                     <li><a href="{% url 'blog:login_index' %}">My info</a></li>
-                    <li><a href="{% url 'blog:report' %}">Report</a></li>
-                    <li><a href="{% url 'blog:feedback' %}">Feedback</a></li>
+                    <li><a href="{% url 'communication:report' %}">Report</a></li>
+                    <li><a href="{% url 'communication:feedback' %}">Feedback</a></li>
                     <li><a href="#">Login</a></li>
                     </ul>
             </div>
@@ -29,7 +29,7 @@
             <div id="main-nav">
                 <div class="container-fluid">
                     <div class="nav-header">
-                        <a href="{% url 'gallery:index' %}" class="nav-brand">페이지 <span>이름 ?</span></a>
+                        <a href="{% url 'gallery:index' %}" class="nav-brand">Advertising <span>Catcher</span></a>
                     </div>
 				</div>
 			</div>
