--- a/AdsCatcher/communication/templates/communication/report.html
+++ b/AdsCatcher/communication/templates/communication/report.html
@@ -5,7 +5,7 @@
 
             <div class="container-fluid title">
 				<div class="col-md-4 col-md-offset-4 text-center">
-					<h2>받는다 제보</h2>
+					<h2><i>제보 페이지입니다 !</i></h2>
 				</div>
 			</div>
 
