media 파일과 communication 앱 수정

--- a/adscatcher/AdsCatcher/static/css/style.css
+++ b/adscatcher/AdsCatcher/static/css/style.css
@@ -27,6 +27,7 @@ a:focus {
   border-top: 43px solid #3b5998;
 }
 .container-fluid {
+  font-family: 'Nanum Gothic', serif;
   margin-right: auto;
   margin-left: auto;
   max-width: 1200px;
