--- a/AdsCatcher/communication/templates/communication/feedback.html
+++ b/AdsCatcher/communication/templates/communication/feedback.html
@@ -5,21 +5,27 @@
 
             <div class="container-fluid title">
 				<div class="col-md-4 col-md-offset-4 text-center">
-					<h2>받는다 피드백</h2>
+					<h2><i>Feedback Page</i></h2>
 				</div>
 			</div>
 
 			 <div class="container-fluid">
 				 <div class="col-md-8 col-md-offset-2">
-					 <form class="form-horizontal" role="form">
-						 <h4>★ 이건 피드백 페이지</h4>
-                         <br>
-						 <p>기능 - In this page, we notice to user about the feedback function enough.<br>
-                         And we will inform our email address made for receiving user feedback.<br>
-                         <br>                         그래서 메일 주소나 그런거 여기에 공지해줄건데
-                         어떤 기능이 더 필요하련가 모르게씀
-                        </p>
+					 <form class="form-horizontal" method="POST" action="" enctype="multipart/form-data">
+					 {% csrf_token %}
+						<div class="form-group" style="padding:14px;">
+							<label class="control-label">TITLE</label>
+							<input class="form-control" id="id_title" maxlength="30" name="title" required="required" title="" type="text" />
+							<br />
+							<label class="control-label" for="id_contents">CONTENTS</label>
+							<textarea class="form-control" cols="40" id="id_contents" name="contents"  required="required" rows="10" title=""></textarea>
+							<br /><br />
+							<button class="btn btn-primary" type="submit">Send Message</button>
+						</div>
 					</form>
 				</div>
+			</div>
+			<br /><br />
+			
             
             {% endblock %}	
