--- a/AdsCatcher/communication/templates/communication/report.html
+++ b/AdsCatcher/communication/templates/communication/report.html
@@ -5,23 +5,23 @@
 
             <div class="container-fluid title">
 				<div class="col-md-4 col-md-offset-4 text-center">
-					<h2><i>제보 페이지입니다 !</i></h2>
+					<h2><i>Report Page</i></h2>
 				</div>
 			</div>
-
-			 <div class="container-fluid">
+			
+			<div class="container-fluid">
 				 <div class="col-md-8 col-md-offset-2">
-					 <form class="form-horizontal" role="form">
-						 <h4>★ 불법 광고충 페이지 제보 폼</h4>
-						 <p>대숲 제보 페이지에는 이것저것 있더라<br>
-						 자주 묻는 질문이나 제보 규칙, 제보 카테고리 선택 등<br>
-						 이렇게 폼만 있으니깐 너무 허전한듯ㅜ</p>
+					 
+					 <form class="form-horizontal" method="POST" action="" enctype="multipart/form-data">
+						 {% csrf_token %}
+						 <h4>Please give me an account of the illegal advertising Facebook page and the account. </h4>
+						 <p>- You have to include the page or account name and a picture of modified advertisement.</p>
 						<div class="form-group" style="padding:14px;">
-							<textarea class="form-control" placeholder="내용을 작성해주세요!"></textarea>
+							<textarea class="form-control" cols="40" id="id_contents" name="contents"  required="required" rows="10" title=""></textarea>
 						</div>
-						<button class="btn btn-primary pull-right" type="button">제보하기</button>
+						<button class="btn btn-primary pull-right" type="button">Submit</button>
 						<ul class="list-inline">
-							<li><a href=""><i class="glyphicon glyphicon-camera"></i> 사진 첨부하기</a></li>
+							<li><a href=""><i class="glyphicon glyphicon-camera"></i> Attach your picture </a></li>
 						</ul>
 					</form>
 				</div>
