--- a/adscatcher/AdsCatcher/templates/base.html
+++ b/adscatcher/AdsCatcher/templates/base.html
@@ -18,8 +18,8 @@
                 <ul class="nav-list text-center effect">
                     <li><a href="{% url 'gallery:index' %}">Home</a></li>
                     <li><a href="{% url 'blog:login_index' %}">My info</a></li>
-                    <li><a href="{% url 'communication:report' %}">Report</a></li>
-                    <li><a href="{% url 'communication:feedback' %}">Feedback</a></li>
+                    <li><a href="{% url 'communication:report_new' %}">Report</a></li>
+                    <li><a href="{% url 'communication:feedback_new' %}">Feedback</a></li>
                     <li><a href="#">Login</a></li>
                     </ul>
             </div>
