--- a/AdsCatcher/blog/templates/blog/login_index.html
+++ b/AdsCatcher/blog/templates/blog/login_index.html
@@ -13,9 +13,10 @@
         <h2 style="text-transform:capitalize;">{{ account.provider }} account data</h2>
         <p><img width="50" height="50" src="{{ account.get_avatar_url }}" /></p>
         <p>UID: <a href="{{account.extra_data.link }}">{{ account.uid }}</a></p>
-        <p>Username: {{ account.extra_data.username }}</p>
+        <p>Username: {{ account.extra_data.name }}</p>
         <p>First Name: {{ account.extra_data.first_name }}</p>
         <p>Last Name: {{ account.extra_data.last_name }}</p>
+        <p>Last Name: {{ account.extra_data.likes }}</p>
         <p>Profile Link: <a href="{{ account.extra_data.link }}">{{ account.extra_data.link }}</a></p>
     {% endfor %}
 {% endif %}
