--- a/AdsCatcher/communication/templates/communication/report.html
+++ b/AdsCatcher/communication/templates/communication/report.html
@@ -11,7 +11,6 @@
 			
 			<div class="container-fluid">
 				 <div class="col-md-8 col-md-offset-2">
-					 
 					 <form class="form-horizontal" method="POST" action="" enctype="multipart/form-data">
 						 {% csrf_token %}
 						 <h4>Please give me an account of the illegal advertising Facebook page and the account. </h4>
@@ -19,11 +18,14 @@
 						<div class="form-group" style="padding:14px;">
 							<textarea class="form-control" cols="40" id="id_contents" name="contents"  required="required" rows="10" title=""></textarea>
 						</div>
-						<button class="btn btn-primary pull-right" type="button">Submit</button>
+						<button class="btn btn-primary pull-right" type="submit">Submit</button>
 						<ul class="list-inline">
-							<li><a href=""><i class="glyphicon glyphicon-camera"></i> Attach your picture </a></li>
+							<li><input type="file" name="image" required="required"></li>
 						</ul>
 					</form>
 				</div>
-            
+			</div>
+			<br />
+			<br />
+
             {% endblock %}	
