--- a/adscatcher/AdsCatcher/templates/base.html
+++ b/adscatcher/AdsCatcher/templates/base.html
@@ -22,7 +22,11 @@
                     <li><a href="{% url 'blog:login_index' %}">My info</a></li>
                     <li><a href="{% url 'communication:report_new' %}">Report</a></li>
                     <li><a href="{% url 'communication:feedback_new' %}">Feedback</a></li>
-                    <li><a href="#">Login</a></li>
+                    {% if not user.is_authenticated %}
+                    <li><a href="accounts/login">Login</a></li>
+                    {% else %}
+                    <li><a href="accounts/logout">Logout</a></li>
+                    {% endif %}
                     </ul>
             </div>
         </div>
