login.html 을 수정했음

--- a/AdsCatcher/AdsCatcher/templates/allauth/account/login.html
+++ b/AdsCatcher/AdsCatcher/templates/allauth/account/login.html
@@ -12,7 +12,7 @@
         >
         
         <span class="fa fa-facebook"></span>
-               Sign in with Facebook
+               페이스북으로 계속하기.
 
     </a>
  
