--- a/adscatcher/AdsCatcher/templates/base.html
+++ b/adscatcher/AdsCatcher/templates/base.html
@@ -23,9 +23,9 @@
                     <li><a href="{% url 'communication:report_new' %}">Report</a></li>
                     <li><a href="{% url 'communication:feedback_new' %}">Feedback</a></li>
                     {% if not user.is_authenticated %}
-                    <li><a href="accounts/login">Login</a></li>
+                    <li><a href="/accounts/login">Login</a></li>
                     {% else %}
-                    <li><a href="accounts/logout">Logout</a></li>
+                    <li><a href="/accounts/logout">Logout</a></li>
                     {% endif %}
                     </ul>
             </div>
